test/negative/UnknownAttribute.hx
class UnknownAttribute {
	static function main():Void {
		var value = <heredoc mystery="yes">text</heredoc>;
	}
}
